working on fixing the background image. Not showing on the actual website

--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,7 @@ p {
 }
 
 main {
-    background-image: url("/../Images/logo_background.png");
+    background-image: url("../Images/logo_background.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
